PA3/cool.output
Terminals unused in grammar

   LE
   ERROR
   "<-"


State 11 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'

    4 class: CLASS TYPEID '{' feature_list '}'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'
    6      | error

    7 feature_list: /* empty */
    8             | feature ';'
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | error

   14 formal_list: /* empty */
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 comma_expr_list: /* empty */
   19                | expr
   20                | comma_expr_list ',' expr

   21 expr_semi_list: expr ';'
   22               | expr_semi_list expr ';'

   23 expr_let_part_1: LET expr_let_part_2

   24 expr_let_part_2: OBJECTID ':' TYPEID IN expr
   25                | OBJECTID ':' TYPEID ASSIGN expr IN expr
   26                | OBJECTID ':' TYPEID ',' expr_let_part_2
   27                | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let_part_2

   28 expr_case_list: OBJECTID ':' TYPEID DARROW expr ';'
   29               | expr_case_list OBJECTID ':' TYPEID DARROW expr ';'

   30 expr: OBJECTID ASSIGN expr
   31     | expr '.' OBJECTID '(' comma_expr_list ')'
   32     | expr '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   33     | OBJECTID '(' comma_expr_list ')'
   34     | IF expr THEN expr ELSE expr FI
   35     | WHILE expr LOOP expr POOL
   36     | '{' expr_semi_list '}'
   37     | expr_let_part_1
   38     | CASE expr OF expr_case_list ESAC
   39     | NEW TYPEID
   40     | ISVOID expr
   41     | expr '+' expr
   42     | expr '-' expr
   43     | expr '*' expr
   44     | expr '/' expr
   45     | '~' expr
   46     | expr '<' expr
   47     | expr "<=" expr
   48     | expr '=' expr
   49     | NOT expr
   50     | '(' expr ')'
   51     | OBJECTID
   52     | INT_CONST
   53     | STR_CONST
   54     | BOOL_CONST
   55     | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 31 32 33 50
')' (41) 10 31 32 33 50
'*' (42) 43
'+' (43) 41
',' (44) 16 20 26 27
'-' (45) 42
'.' (46) 31 32
'/' (47) 44
':' (58) 10 11 12 17 24 25 26 27 28 29
';' (59) 2 3 8 9 21 22 28 29
'<' (60) 46
'=' (61) 48
'@' (64) 32
'{' (123) 4 5 10 36
'}' (125) 4 5 10 36
'~' (126) 45
error (256) 6 13 55
CLASS (258) 4 5
ELSE (259) 34
FI (260) 34
IF (261) 34
IN (262) 24 25
INHERITS (263) 5
LET (264) 23
LOOP (265) 35
POOL (266) 35
THEN (267) 34
WHILE (268) 35
CASE (269) 38
ESAC (270) 38
OF (271) 38
DARROW (272) 28 29
NEW (273) 39
ISVOID (274) 40
STR_CONST (275) 53
INT_CONST (276) 52
BOOL_CONST (277) 54
TYPEID (278) 4 5 10 11 12 17 24 25 26 27 28 29 32 39
OBJECTID (279) 10 11 12 17 24 25 26 27 28 29 30 31 32 33 51
ASSIGN (280) 12 25 27 30
NOT (281) 49
LE (282)
ERROR (283)
"<-" (285)
"<=" (286) 47


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
class_list (49)
    on left: 2 3, on right: 1 3
class (50)
    on left: 4 5 6, on right: 2 3
feature_list (51)
    on left: 7 8 9, on right: 4 5 9
feature (52)
    on left: 10 11 12 13, on right: 8 9
formal_list (53)
    on left: 14 15 16, on right: 10 16
formal (54)
    on left: 17, on right: 15 16
comma_expr_list (55)
    on left: 18 19 20, on right: 20 31 32 33
expr_semi_list (56)
    on left: 21 22, on right: 22 36
expr_let_part_1 (57)
    on left: 23, on right: 37
expr_let_part_2 (58)
    on left: 24 25 26 27, on right: 23 26 27
expr_case_list (59)
    on left: 28 29, on right: 29 38
expr (60)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55, on right: 10 12 19 20 21 22 24 25 27 28
    29 30 31 32 34 35 38 40 41 42 43 44 45 46 47 48 49 50


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' feature_list '}'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class ';'

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class . ';'

    ';'  shift, and go to state 9


state 6

    4 class: CLASS TYPEID . '{' feature_list '}'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 12


state 9

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 13


state 11

    4 class: CLASS TYPEID '{' . feature_list '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 16
    feature       go to state 17


state 12

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


state 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 18


state 14

   13 feature: error .

    $default  reduce using rule 13 (feature)


state 15

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


state 16

    4 class: CLASS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 21

    feature  go to state 22


state 17

    8 feature_list: feature . ';'

    ';'  shift, and go to state 23


state 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 17


state 19

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


state 20

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 28


state 21

    4 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 4 (class)


state 22

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 29


state 23

    8 feature_list: feature ';' .

    $default  reduce using rule 8 (feature_list)


state 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 30

    feature  go to state 22


state 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


state 26

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


state 27

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 28

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 11 (feature)


state 29

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


state 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


state 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


state 32

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 36


state 33

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


state 34

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 54


state 35

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 36

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 55


state 37

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 38

   55 expr: error .

    $default  reduce using rule 55 (expr)


state 39

   34 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 56


state 40

   23 expr_let_part_1: LET . expr_let_part_2

    OBJECTID  shift, and go to state 57

    expr_let_part_2  go to state 58


state 41

   35 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 59


state 42

   38 expr: CASE . expr OF expr_case_list ESAC

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 60


state 43

   39 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


state 44

   40 expr: ISVOID . expr

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 62


state 45

   53 expr: STR_CONST .

    $default  reduce using rule 53 (expr)


state 46

   52 expr: INT_CONST .

    $default  reduce using rule 52 (expr)


state 47

   54 expr: BOOL_CONST .

    $default  reduce using rule 54 (expr)


state 48

   30 expr: OBJECTID . ASSIGN expr
   33     | OBJECTID . '(' comma_expr_list ')'
   51     | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 51 (expr)


state 49

   49 expr: NOT . expr

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 65


state 50

   45 expr: '~' . expr

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 66


state 51

   36 expr: '{' . expr_semi_list '}'

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_semi_list   go to state 67
    expr_let_part_1  go to state 53
    expr             go to state 68


state 52

   50 expr: '(' . expr ')'

    error       shift, and go to state 38
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_let_part_1  go to state 53
    expr             go to state 69


state 53

   37 expr: expr_let_part_1 .

    $default  reduce using rule 37 (expr)


state 54

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   31 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . "<=" expr
   48     | expr . '=' expr

    "<="  shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78

    $default  reduce using rule 12 (feature)


state 55

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 79


state 56

   31 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   34     | IF expr . THEN expr ELSE expr FI
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . "<=" expr
   48     | expr . '=' expr

    THEN  shift, and go to state 80
    "<="  shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


state 57

   24 expr_let_part_2: OBJECTID . ':' TYPEID IN expr
   25                | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   26                | OBJECTID . ':' TYPEID ',' expr_let_part_2
   27                | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let_part_2

    ':'  shift, and go to state 81


state 58

   23 expr_let_part_1: LET expr_let_part_2 .

    $default  reduce using rule 23 (expr_let_part_1)


state 59

   31 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   32     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   35     | WHILE expr . LOOP expr POOL
   41     | expr . '+' expr
   42     | expr . '-' expr
   43     | expr . '*' expr
   44     | expr . '/' expr
   46     | expr . '<' expr
   47     | expr . "<=" expr
   48     | expr . '=' expr

    LOOP  shift, and go to state 82
    "<="  shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


state 60
